Closed
Bug 663356
Opened 14 years ago
Closed 14 years ago
AOT compilation of shell apps is broken again
Categories
(Tamarin Graveyard :: Virtual Machine, defect)
Tamarin Graveyard
Virtual Machine
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: almancha, Unassigned)
References
Details
(Whiteboard: WE:2865886, fixed-in-tr)
Attachments
(1 file, 2 obsolete files)
1.37 KB,
patch
|
stejohns
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_6_7) AppleWebKit/534.30 (KHTML, like Gecko) Chrome/12.0.742.91 Safari/534.30
Build Identifier:
AOT compilation of shell apps is broken again, need to update namespace when referencing a few classes.
Reproducible: Always
Reporter | ||
Comment 1•14 years ago
|
||
Attachment #538482 -
Flags: review?(stejohns)
Reporter | ||
Comment 2•14 years ago
|
||
Steven, if the fix looks OK would you please go ahead and push it into tamarin for me? Thanks!
Comment 3•14 years ago
|
||
The previous fix got accidentally nuked in a merge, I just reapplied it. Closing this one.
Status: UNCONFIRMED → RESOLVED
Closed: 14 years ago
Resolution: --- → DUPLICATE
Reporter | ||
Comment 4•14 years ago
|
||
A couple of additional changes are required, re-activating this bug.
Status: RESOLVED → UNCONFIRMED
Resolution: DUPLICATE → ---
Reporter | ||
Comment 5•14 years ago
|
||
Need to add namespace qualifier at a few places.
Attachment #538810 -
Flags: review?(stejohns)
Reporter | ||
Comment 6•14 years ago
|
||
Added namespace qualifier at a few places.
Attachment #538482 -
Attachment is obsolete: true
Attachment #538810 -
Attachment is obsolete: true
Attachment #538482 -
Flags: review?(stejohns)
Attachment #538810 -
Flags: review?(stejohns)
Attachment #538811 -
Flags: review?(stejohns)
Reporter | ||
Comment 7•14 years ago
|
||
Please submit if it looks OK, thanks!
Comment 8•14 years ago
|
||
Comment on attachment 538811 [details] [diff] [review]
Proposed fix
Review of attachment 538811 [details] [diff] [review]:
-----------------------------------------------------------------
looks good, pushing
Attachment #538811 -
Flags: review?(stejohns) → review+
Comment 9•14 years ago
|
||
TR 6389:a8fe404fd6b4
Status: UNCONFIRMED → RESOLVED
Closed: 14 years ago → 14 years ago
Resolution: --- → FIXED
Updated•14 years ago
|
Whiteboard: WE:2865886, fixed-in-tr
You need to log in
before you can comment on or make changes to this bug.
Description
•