Bug 663356 - AOT compilation of shell apps is broken again (r=stejohns)